@@ -9959,6 +9959,44 @@ name|nodeName
 argument_list|)
 expr_stmt|;
 comment|// TODO: change this to handle sharding a slice into> 2 sub-shards.
+name|Map
+argument_list|<
+name|Position
+argument_list|,
+name|String
+argument_list|>
+name|nodeMap
+init|=
+name|identifyNodes
+argument_list|(
+name|clusterState
+argument_list|,
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|(
+name|clusterState
+operator|.
+name|getLiveNodes
+argument_list|()
+argument_list|)
+argument_list|,
+operator|new
+name|ZkNodeProps
+argument_list|(
+name|collection
+operator|.
+name|getProperties
+argument_list|()
+argument_list|)
+argument_list|,
+name|subSlices
+argument_list|,
+name|repFactor
+operator|-
+literal|1
+argument_list|)
+decl_stmt|;
 name|List
 argument_list|<
 name|Map
@@ -9985,86 +10023,39 @@ argument_list|)
 decl_stmt|;
 for|for
 control|(
-name|int
-name|i
-init|=
-literal|1
-init|;
-name|i
-operator|<=
-name|subSlices
+name|Map
 operator|.
-name|size
+name|Entry
+argument_list|<
+name|Position
+argument_list|,
+name|String
+argument_list|>
+name|entry
+range|:
+name|nodeMap
+operator|.
+name|entrySet
 argument_list|()
-condition|;
-name|i
-operator|++
 control|)
 block|{
-name|Collections
-operator|.
-name|shuffle
-argument_list|(
-name|nodeList
-argument_list|,
-name|RANDOM
-argument_list|)
-expr_stmt|;
 name|String
 name|sliceName
 init|=
-name|subSlices
+name|entry
 operator|.
-name|get
-argument_list|(
-name|i
-operator|-
-literal|1
-argument_list|)
+name|getKey
+argument_list|()
+operator|.
+name|shard
 decl_stmt|;
-for|for
-control|(
-name|int
-name|j
-init|=
-literal|2
-init|;
-name|j
-operator|<=
-name|repFactor
-condition|;
-name|j
-operator|++
-control|)
-block|{
 name|String
 name|subShardNodeName
 init|=
-name|nodeList
+name|entry
 operator|.
-name|get
-argument_list|(
-operator|(
-name|repFactor
-operator|*
-operator|(
-name|i
-operator|-
-literal|1
-operator|)
-operator|+
-operator|(
-name|j
-operator|-
-literal|2
-operator|)
-operator|)
-operator|%
-name|nodeList
-operator|.
-name|size
+name|getValue
 argument_list|()
-argument_list|)
 decl_stmt|;
 name|String
 name|shardName
@@ -10078,7 +10069,12 @@ operator|+
 literal|"_replica"
 operator|+
 operator|(
-name|j
+name|entry
+operator|.
+name|getKey
+argument_list|()
+operator|.
+name|index
 operator|)
 decl_stmt|;
 name|log
@@ -10324,7 +10320,6 @@ argument_list|(
 name|propMap
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 comment|// we must set the slice state into recovery before actually creating the replica cores
 comment|// this ensures that the logic inside Overseer to update sub-shard state to 'active'
@@ -15474,7 +15469,7 @@ name|List
 argument_list|<
 name|Map
 argument_list|>
-name|maps
+name|rulesMap
 init|=
 operator|(
 name|List
@@ -15488,7 +15483,7 @@ argument_list|)
 decl_stmt|;
 if|if
 condition|(
-name|maps
+name|rulesMap
 operator|==
 literal|null
 condition|)
@@ -15584,7 +15579,7 @@ control|(
 name|Object
 name|map
 range|:
-name|maps
+name|rulesMap
 control|)
 name|rules
 operator|.
@@ -16039,6 +16034,13 @@ name|getShardHandler
 argument_list|()
 decl_stmt|;
 comment|// Kind of unnecessary, but it does put the logic of whether to override maxShardsPerNode in one place.
+if|if
+condition|(
+name|node
+operator|==
+literal|null
+condition|)
+block|{
 name|node
 operator|=
 name|getNodesForNewReplicas
@@ -16069,6 +16071,7 @@ argument_list|)
 operator|.
 name|nodeName
 expr_stmt|;
+block|}
 name|log
 operator|.
 name|info
