@@ -1268,8 +1268,13 @@ name|entrySet
 argument_list|()
 control|)
 block|{
+name|Map
+argument_list|<
+name|String
+argument_list|,
 name|Object
-name|obj
+argument_list|>
+name|tagValues
 init|=
 name|nodeVsTags
 operator|.
@@ -1280,6 +1285,18 @@ operator|.
 name|getKey
 argument_list|()
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|tagValues
+operator|==
+literal|null
+condition|)
+continue|continue;
+name|Object
+name|obj
+init|=
+name|tagValues
 operator|.
 name|get
 argument_list|(
