@@ -160,7 +160,43 @@ name|solrj
 operator|.
 name|request
 operator|.
+name|CollectionAdminRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|request
+operator|.
 name|QueryRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|response
+operator|.
+name|CollectionAdminResponse
 import|;
 end_import
 
@@ -669,6 +705,160 @@ literal|true
 argument_list|)
 expr_stmt|;
 comment|//waitForThingsToLevelOut(15);
+block|}
+annotation|@
+name|Test
+DECL|method|testSplitShardWithRule
+specifier|public
+name|void
+name|testSplitShardWithRule
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|waitForThingsToLevelOut
+argument_list|(
+literal|15
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|usually
+argument_list|()
+condition|)
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Using legacyCloud=false for cluster"
+argument_list|)
+expr_stmt|;
+name|CollectionsAPIDistributedZkTest
+operator|.
+name|setClusterProp
+argument_list|(
+name|cloudClient
+argument_list|,
+literal|"legacyCloud"
+argument_list|,
+literal|"false"
+argument_list|)
+expr_stmt|;
+block|}
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Starting testSplitShardWithRule"
+argument_list|)
+expr_stmt|;
+name|String
+name|collectionName
+init|=
+literal|"shardSplitWithRule"
+decl_stmt|;
+name|CollectionAdminRequest
+operator|.
+name|Create
+name|createRequest
+init|=
+operator|new
+name|CollectionAdminRequest
+operator|.
+name|Create
+argument_list|()
+operator|.
+name|setCollectionName
+argument_list|(
+name|collectionName
+argument_list|)
+operator|.
+name|setNumShards
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|setReplicationFactor
+argument_list|(
+literal|2
+argument_list|)
+operator|.
+name|setRule
+argument_list|(
+literal|"shard:*,replica:<2,node:*"
+argument_list|)
+decl_stmt|;
+name|CollectionAdminResponse
+name|response
+init|=
+name|createRequest
+operator|.
+name|process
+argument_list|(
+name|cloudClient
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|response
+operator|.
+name|getStatus
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|CollectionAdminRequest
+operator|.
+name|SplitShard
+name|splitShardRequest
+init|=
+operator|new
+name|CollectionAdminRequest
+operator|.
+name|SplitShard
+argument_list|()
+operator|.
+name|setCollectionName
+argument_list|(
+name|collectionName
+argument_list|)
+operator|.
+name|setShardName
+argument_list|(
+literal|"shard1"
+argument_list|)
+decl_stmt|;
+name|response
+operator|=
+name|splitShardRequest
+operator|.
+name|process
+argument_list|(
+name|cloudClient
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|response
+operator|.
+name|getErrorMessages
+argument_list|()
+argument_list|)
+argument_list|,
+literal|0
+argument_list|,
+name|response
+operator|.
+name|getStatus
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|incompleteOrOverlappingCustomRangeTest
 specifier|private
